--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,6 +93,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_trusted_access_points">TrustedAccessPointsActivity</string>
     <string name="title_activity_domain_data_log">DomainDataLogActivity</string>
+    <string name="title_activity_statistics">StatisticsActivity</string>
     <!-- about end -->
 
 
